[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["Taylor Fraley <tofraley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.35"
futures = "0.1.29"
slab = "0.4.2"
regex = "1.5.5"
lazy_static = "1.4.0"
